; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_kpc_common.c_kpc_set_running.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_kpc_common.c_kpc_set_running.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kpc_running_remote = type { i32, i64, i64 }

@KPC_CLASS_CONFIGURABLE_MASK = common dso_local global i32 0, align 4
@KPC_CLASS_POWER_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kpc_set_running(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.kpc_running_remote, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @KPC_CLASS_CONFIGURABLE_MASK, align 4
  %6 = load i32, i32* @KPC_CLASS_POWER_MASK, align 4
  %7 = or i32 %5, %6
  store i32 %7, i32* %3, align 4
  %8 = bitcast %struct.kpc_running_remote* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %8, i8 0, i64 24, i1 false)
  %9 = getelementptr inbounds %struct.kpc_running_remote, %struct.kpc_running_remote* %4, i32 0, i32 0
  %10 = load i32, i32* %2, align 4
  store i32 %10, i32* %9, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call i8* @kpc_get_configurable_pmc_mask(i32 %11)
  %13 = ptrtoint i8* %12 to i64
  %14 = getelementptr inbounds %struct.kpc_running_remote, %struct.kpc_running_remote* %4, i32 0, i32 1
  store i64 %13, i64* %14, align 8
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* @KPC_CLASS_POWER_MASK, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %1
  %20 = load i32, i32* @KPC_CLASS_CONFIGURABLE_MASK, align 4
  %21 = getelementptr inbounds %struct.kpc_running_remote, %struct.kpc_running_remote* %4, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = or i32 %22, %20
  store i32 %23, i32* %21, align 8
  br label %24

24:                                               ; preds = %19, %1
  %25 = load i32, i32* %2, align 4
  %26 = call i8* @kpc_get_configurable_pmc_mask(i32 %25)
  %27 = ptrtoint i8* %26 to i64
  %28 = getelementptr inbounds %struct.kpc_running_remote, %struct.kpc_running_remote* %4, i32 0, i32 2
  store i64 %27, i64* %28, align 8
  %29 = call i32 @kpc_set_running_arch(%struct.kpc_running_remote* %4)
  ret i32 %29
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i8* @kpc_get_configurable_pmc_mask(i32) #2

declare dso_local i32 @kpc_set_running_arch(%struct.kpc_running_remote*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
